feat: classes FuncionarioService e ClienteService